Fixing `z-index`

--- a/dp-web/src/app/app.component.scss
+++ b/dp-web/src/app/app.component.scss
@@ -26,6 +26,7 @@
   .page-content {
     min-height: calc(100vh - #{$layout-header-desktop-row-height});
     position: relative;
+    z-index: 0;
   }
 }
 
